remove air tmp folder

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@
 .env.production
 
 # air
-tmp/
-tmp/build-errors.log
-tmp/build-output.log
-tmp/main.exe
-tmp/**
+/tmp
+/tmp/build-errors.log
+/tmp/build-output.log
+/tmp/main.exe
+/tmp/**
 
 # vscode
 .vscode
